local/angular-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angularapp
spec:
  replicas: 1  # Adjust the number of replicas as per your requirements
  selector:
    matchLabels:
      app: angularapp
  template:
    metadata:
      labels:
        app: angularapp
    spec:
      containers:
        - name: angular-app-container
          image: vbmb2012/fooddelivery:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: angularapp
spec:
  selector:
    app: angularapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
