local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://192.168.49.2/, http://192.168.49.2, http://192.168.49.1"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    # nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_origin ~* ((https://[A-Za-z0-9\-]+\.mydomain\.com))$ ) { set $cors 'true'; }
      set $cors 'false';
      if ($cors = "true") {
      more_set_headers 'Access-Control-Allow-Origin: $http_origin';
      more_set_headers 'Access-Control-Allow-Credentials: true';
      more_set_headers 'Access-Control-Allow-Methods: GET,PUT,POST,DELETE,PATCH,OPTIONS';
      more_set_headers 'Access-Control-Allow-Headers: accept,allow,x-my-custom-header';
      more_set_headers 'Access-Control-Max-Age: 1728000';
      }
      if ($cors = "trueoptions") {
      more_set_headers 'Access-Control-Allow-Origin: $http_origin';
      more_set_headers 'Access-Control-Allow-Credentials: true';
      more_set_headers 'Access-Control-Allow-Methods: GET,PUT,POST,DELETE,PATCH,OPTIONS';
      more_set_headers 'Access-Control-Allow-Headers: accept,allow,x-my-custom-header';
      more_set_headers 'Access-Control-Max-Age: 1728000';
      more_set_headers 'Content-Type: text/plain charset=UTF-8';
      more_set_headers 'Content-Length: 0';
      return 204;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: "hello-test.internal"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angularapp
                port:
                  number: 80

          - path: /restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 9091

          - path: /foodCatalogue
            pathType: Prefix
            backend:
              service:
                name: foodcatalogue-service
                port:
                  number: 9092

          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 9094


          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 9093
